Use Java 11 language features where possible (#551)